--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,6 @@
 @import "pages/index";
 
 
-.purple{
-  background-color: $purple;
+body {
+  background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
 }
