--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -10,7 +10,7 @@
         <% if @chatroom.messages.any? %>
           <div class="panel-body" id="messages">
             <% @chatroom.messages.each do |message| %>
-              <%= render partial: 'messages/message', message: message%>
+              <%= render partial: 'messages/message', locals: {message: message}%>
             <% end %>
           </div>
         <%else%>
