--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,11 @@
 body {
   background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
 }
+
+.container {
+  padding-left: 11%;
+}
+
+a {
+  text-decoration: none !important;
+}
