--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/show_user";
 
-
-body {
+.default-background {
   background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
+}
+
+.show-background{
+background-color: #D9D9D9;
 }
