centered container and heart / cross"

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,8 @@
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   background-color: rgba(255, 255, 255, 0.618);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card-body {
@@ -38,7 +40,7 @@
       align-items: center;
       font-size: 56px;
       text-decoration: none;
-      padding-top: 18%;
+      padding-top: 20%;
     }
   }
 }
