--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -26,11 +26,11 @@
 
   a {
     .fa-heart {
-      color: rgba(180, 57, 57, 0.86);
+      color: #D7689F;
     }
 
     .fa-xmark {
-      color: rgba(62, 62, 193, 0.777);
+      color: #8B7CE3;
     }
 
     i {
