correction of the user music style in the index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <p class="card-text"> <%= user.description %> </p>
     </div>
     <ul class="list-group list-group-flush">
-    <li class="list-group-item">I love : <%= user.music_style %></li>
+    <li class="list-group-item">I love : <%= user.music_styles[0].name %></li>
     <li class="list-group-item">I want to be a : <%= user.goal %></li>
     <li class="list-group-item">My availability : <%= user.disponibility %></li>
     </ul>
