--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,16 +13,16 @@
 @import "pages/show_user";
 
 .default-background {
-  background-image: linear-gradient(to left, #fc5c7d, #6a82fb);
+  background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
 }
 
 .show-background {
-  background-color: #D9D9D9;
+  background-image: linear-gradient(to right, #6a82fb, #93efb3);
 }
 
-.container {
+// .container {
 
-}
+// }
 
 a {
   text-decoration: none !important;
