--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,10 @@
   background-color: rgba(255, 255, 255, 0.618);
   margin-left: auto;
   margin-right: auto;
+
+  img {
+    border-radius: 8px;
+  }
 }
 
 .card-body {
