--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -3,6 +3,9 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background: white;
   padding: 10px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   a {
     color: black;
   }
@@ -15,10 +18,14 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   .messages {
     height: 100%;
     overflow: scroll;
     padding: 1rem;
+    border-top: 1px solid #e9ecef;
     div[id*="messages-"] {
       margin-bottom: 5px;;
     }
