--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     <div class="card-body end">
       <div class="row justify-content-evenly">
         <div class="love-hate-button col-4">
-          <%= link_to "#", remote: true, method: :post do %>
+          <%= link_to  toggle_favorite_user_path(user), remote: true, method: :post do %>
                 <i class="fa-solid fa-heart"></i>
           <% end %>
         </div>
