--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <%= yield %>
 
     </div>
-    <%= render "shared/navbar" %>
+    <%= render "shared/navbar" if current_user %>
 
   </body>
 </html>
