--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <h1>Welcome to <strong>BeatBrothers</strong></h1>
+  <p></p>
+  <a class="btn btn-secondary" href="/users/sign_in">Connexion</a>
+</div>
