--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('compact-disc-solid.svg') %>  </head>
+    <%= favicon_link_tag asset_path('compact-disc-solid.svg') %>
+    <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" %>
+  </head>
 
   <body class=<%= params[:controller] == "users" && params[:action] == "show" ? "show-background" : "default-background"%>>
 
