--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,50 +1,154 @@
-// importé de bootstrap : https://getbootstrap.com/docs/5.2/components/card/#kitchen-sink
+*, *:before, *:after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-.card {
+body {
+  background: #CCFBFE;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+
+.tinder {
+  width: auto;
+  height: 90vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+}
+
+.loaded.tinder {
+  opacity: 1;
+}
+
+.tinder--status {
+  position: absolute;
+  top: 50%;
+  margin-top: -30px;
+  z-index: 2;
+  width: 100%;
+  text-align: center;
+  pointer-events: none;
+}
+
+.tinder--status i {
+  font-size: 100px;
+  opacity: 0;
+  transform: scale(0.3);
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  width: 100px;
+  margin-left: -50px;
+}
+
+.tinder_love .fa-heart {
+  opacity: 0.7;
+  transform: scale(1);
+}
+
+.tinder_nope .fa-remove {
+  opacity: 0.7;
+  transform: scale(1);
+}
+
+.tinder--cards {
+  flex-grow: 1;
+  padding-top: 40px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 1;
+  padding-bottom: 22px;
+}
+
+.tinder--card {
+  display: inline-block;
+  width: 90vw;
+  max-width: 400px;
+  height: 64vh;
+  background: #F2F5FE;
+  padding-bottom: 8px;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  background-color: rgba(255, 255, 255, 0.618);
-  margin-left: auto;
-  margin-right: auto;
+  overflow: scroll;
+  position: absolute;
+  will-change: transform;
+  transition: all 0.3s ease-in-out;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: grab;
 
-  img {
-    border-radius: 8px;
+    li {
+      background: #F2F5FE;
+    }
+}
+
+.moving.tinder--card {
+  transition: none;
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: grabbing;
+}
+
+.tinder--card img {
+  max-width: 100%;
+  pointer-events: none;
+}
+
+.tinder--card h3 {
+  margin-top: 8px;
+  font-size: 32px;
+  padding: 0 16px;
+  pointer-events: none;
+  color: black;
+}
+
+.tinder--card p {
+  margin-top: 24px;
+  font-size: 20px;
+  padding: 0 16px;
+  pointer-events: none;
+}
+
+.tinder--buttons {
+  flex: 0 0 100px;
+  text-align: center;
+  padding-bottom: 48px;
+
+  .fa-heart {
+    color: #D9669C;
+    font-size: 48px;
   }
+
+  .fa-remove {
+    color: #8B7CE3;
+    font-size: 56px;
+
+  }
+}
+
+.tinder--buttons button {
+  border-radius: 50%;
+  line-height: 80px;
+  width: 80px;
+  border: 0;
+  background: #F2F5FE;
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.tinder--buttons button:focus {
+  outline: 0;
+}
+
+.tinder--buttons i {
+  vertical-align: middle;
 }
 
 .card-body {
-  background-color: rgba(255, 255, 255, 0.618);
-  justify-content: space-between;
-  border-radius: 8px;
-}
-
-.list-group-item {
-  background-color: rgba(255, 255, 255, 0.618);
-}
-
-.love-hate-button {
-  background-color: rgba(255, 255, 255, 0.787);
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-
-  a {
-    .fa-heart {
-      color: #D7689F;
-    }
-
-    .fa-xmark {
-      color: #8B7CE3;
-    }
-
-    i {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      font-size: 56px;
-      text-decoration: none;
-      padding-top: 20%;
-    }
-  }
+  margin-bottom: -16px;
 }
