--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -6,8 +6,20 @@
 <div class="container chatroom" data-controller="chatroom-subscription"
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <div class="messages" data-chatroom-subscription-target="messages">
-    <% @chatroom.messages.each do |message| %>
-      <%= render "messages/message", message: message %>
+    <% if @chatroom.messages.blank? %>
+      <i>Be the first to send <%= @chatroom.chatroom_buddy(current_user).name %> a message 🎶</i>
+    <% else %>
+      <% @chatroom.messages.each do |message| %>
+        <% if message.user_id == current_user.id %>
+          <div class="message-current-user">
+            <%= render "messages/message", message: message %>
+          </div>
+        <% else %>
+          <div class="message-other-user">
+            <%= render "messages/message", message: message %>
+          </div>
+        <% end %>
+      <% end %>
     <% end %>
 
   </div>
@@ -19,6 +31,6 @@
       label: false,
       placeholder: "Message"
     %>
-    <%= f.submit "Send", class: "btn btn-primary" %>
+    <%= f.submit "Send", class: "btn btn-chatroom" %>
   <% end %>
 </div>
