--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
       <div class="container-fluid">
-        <%= link_to "#", class: "navbar-brand" do %>
+        <%= link_to "/", class: "navbar-brand" do %>
         <%= image_tag("logo_sans_fond.png") %>
         <% end %>
       </div>
