--- a/app/views/users/index_favorited.html.erb
+++ b/app/views/users/index_favorited.html.erb
@@ -1,12 +1,13 @@
-<h1>Voici vos favoris</h1>
-
+<br>
 <% @favorited_users.each do |favorite| %>
-  <ul>
-    <li>
-    <%= link_to user_path(favorite.favoritable) do %>
-      <%= favorite.favoritable.name %>
-      <%= favorite.favoritable.surname %>
-    <% end %>
-    </li>
-  </ul>
+  <%= link_to user_path(favorite.favoritable) do %>
+    <div class="card-product">
+      <img <%= cl_image_tag @user.photos.first.key, height: 300, width: 400, crop: :fill %> />
+      <div class="card-product-infos">
+        <h2> <%= @user.name %> </h2>
+        <p> <%= @user.music_styles[0].name %> </p>
+      </div>
+    </div>
+  <% end %>
+  <br>
 <% end %>
