Adding fav in the seeds and display them

--- a/app/views/users/index_favorited.html.erb
+++ b/app/views/users/index_favorited.html.erb
@@ -1,8 +1,9 @@
 <br>
 <% @favorited_users.each do |favorite| %>
+  <% @user = User.find(@favorited_users[0].favoritable_id) %>
   <%= link_to user_path(favorite.favoritable) do %>
     <div class="card-product">
-      <img <%= cl_image_tag @user.photos.first.key, height: 300, width: 400, crop: :fill %> />
+      <img <%= cl_image_tag @user.photos.first.key, height: 300, width: 400, crop: :fill %>>
       <div class="card-product-infos">
         <h2> <%= @user.name %> </h2>
         <p> <%= @user.music_styles[0].name %> </p>
