--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar-bb fixed-bottom">
   <div class="footer">
     <div class="footer-links">
-      <a href="#"><i class="fa-solid fa-earth-americas"></i></a>
+      <a href="/users/<%=current_user.id%>/edit">O</a>
       <a href="/users/<%=current_user.id%>/favorited_users"><i class="fa-regular fa-heart"></i></a>
       <a href="/users"><i class="fa-solid fa-compact-disc"></i></a>
       <a href="/chatrooms"><i class="fa-regular fa-comment"></i></a>
-      <a href="#"><i class="fa-solid fa-sliders"></i></a>
+      <a href="/users/<%=current_user.id%>/user_songs">M<i class="fa-solid fa-list-music"></i></a>
     </div>
 </nav>
