--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "form_legend_clear";
-@import "navbar";
-@import "button-link";
-@import "footer";
-@import "card";
+@import "button";
 @import "chatroom";
 @import "chatroom-card";
-@import "messages";
+@import "card";
 @import "card-product";
+@import "footer";
+@import "form_legend_clear";
+@import "messages";
+@import "navbar";
