--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -4,8 +4,7 @@
   <% @chatrooms.each do |chatroom| %>
     <%= link_to chatroom_path(chatroom) do %>
       <div class="chatroom-card">
-        <%= image_tag chatroom.chatroom_buddy(current_user).avatar_url, class: "chatroom-card-avatar" %>
-        <div class="chatroom-card-content">
+        <%= cl_image_tag chatroom.chatroom_buddy(current_user).photos.first.key, class: "chatroom-card-avatar" %>        <div class="chatroom-card-content">
           <p class="chatroom-card-content-name"><%= chatroom.chatroom_buddy(current_user).name %></p>
           <p class="chatroom-card-content-message"><%= chatroom.messages.last.content.truncate(25) %></p>
         </div>
