--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,22 @@
 <br>
-<div class="tinder--show--card">
-  <div class="card mb-3 tinder--card">
+<div class="tinder--show--cards">
+  <div class="card mb-3 tinder--show--card">
     <%= cl_image_tag @user.photos.first.key, height: 300, width: 400, crop: :fill %>
     <div class="card-body">
         <h2><%= @user.name %> </h2>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item"><i><p> <%= @user.description %> </p></i></li>
-            <li class="list-group-item">I'm into : <%= @user.music_styles.map { |m| m.name }.join(', ').html_safe %></li>
-            <li class="list-group-item">I want to be a : <%= @user.goal.capitalize %></li>
-            <li class="list-group-item">I've been playing for : <%= @user.experience_in_years %> years</li>
-          </ul>
-          <br>
-      <% if current_user.already_in_chatroom?(@user, current_user) %>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><i> <%= @user.description %> </i></li>
+          <li class="list-group-item"><div class="title--card">🎵 I'm into</div>
+          <%= @user.music_styles.map { |m| m.name }.join(', ').html_safe %></li>
+          <li class="list-group-item"><div class="title--card">👨‍🎤 I'm playing</div>
+          <%= @user.user_instruments.map { |i| "#{Instrument.find(i.instrument_id).name} (<i>#{i.level}</i>)" }.join(', ').html_safe %></li>
+          <li class="list-group-item"><div class="title--card">😎 I want to be</div>
+          A <%= @user.goal %></li>
+          <li class="list-group-item"><div class="title--card">⏳ I've been playing for</div>
+          <%= @user.experience_in_years %> years</li>
+        </ul>
+        <br>
+        <% if current_user.already_in_chatroom?(@user, current_user) %>
         <%= link_to chatroom_path(current_user.common_chatroom(@user, current_user)) do %>
           <button type="button" class="btn btn-show-contact">Contact me</button>
         <% end %>
