mp3 en cours, bientot fini

--- a/app/views/user_songs/index.html.erb
+++ b/app/views/user_songs/index.html.erb
@@ -5,3 +5,5 @@
   <source src="<%= rails_blob_url(song.url) %>" type="<%= song.url.content_type %>"/>
 </audio>
 <% end %>
+
+<p>Would you like to add a new song?</p>
