Create fav with JS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 .favorited-background {
   background: #7618FD;
   background-attachment: fixed;
-  background-image: radial-gradient(circle at 4.55% 104.17%, #ff9a53 0, #ff8d55 5%, #ff7c52 10%, #ff654d 20%, #f94646 50%, #ea1a40 62.5%, #de0040 75%, #d50043 87.5%, #cf004a 100%);
+  background-image: radial-gradient(circle at 4.55% 104.17%, #f94646 0%, #cf004a 100%);
 }
 
 .index-background {
@@ -33,7 +33,7 @@
 .chatroom-background {
   background: #7618FD;
   background-attachment: fixed;
-  background-image: radial-gradient(circle at 4.55% 104.17%, #b89bff 0, #9184ff 25%, #6c6cd8 50%, #4955b0 75%, #293f8a 100%);
+  background-image: radial-gradient(circle at 4.55% 104.17%, #935ed5 0, #802895 100%);
 }
 
 .show-background {
@@ -51,7 +51,7 @@
 .song-background {
   background: #7618FD;
   background-attachment: fixed;
-  background-image: radial-gradient(circle at -11.24% 85.36%, #ccffac 0, #b9ffb1 10%, #a5feb5 20%, #91f4b7 30%, #7ee7b7 40%, #6cd8b4 50%, #5dc9b0 60%, #52bcac 70%, #4ab0a9 80%, #45a7a6 90%, #429fa4 100%);
+  background-image: radial-gradient(circle at -11.24% 85.36%, #6cd8b4 0%, #429fa4 100%);
 }
 
 a {
