Adding fav is working

--- a/app/assets/stylesheets/components/_chatroom-card.scss
+++ b/app/assets/stylesheets/components/_chatroom-card.scss
@@ -3,6 +3,8 @@
   height: 76vh;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  max-width: 400px;
+    margin: auto;
   .chatroom-card {
     color: black;
     display: flex;
