Adinng somes good vibes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   <%= link_to new_user_session_path(), class: "connexion-btn-border" do %>
     <span>I'm already a Bro'</span>
   <% end %>
-  <%= link_to new_user_path(), class: "connexion-btn-full" do %>
+  <%= link_to new_visitor_path(), class: "connexion-btn-full", method: :get do %>
     Discover the app
   <% end %>
 </div>
