--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -1,10 +1,13 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: #CCFBFE;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: #e8ebf5e6;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.20);
   display: flex;
   align-items: center;
+  border-radius: 8px;
+  text-decoration: none;
+  color: black;
 }
 
 .card-product img {
@@ -14,8 +17,8 @@
 }
 
 .card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 1.5em;
+  font-weight: 600;
   margin: 0;
 }
 
