--- a/app/views/users/index_favorited.html.erb
+++ b/app/views/users/index_favorited.html.erb
@@ -8,6 +8,7 @@
         <div class="card-product-infos">
           <h2> <%= user.name %> </h2>
           <p> <%= user.music_styles[0].name %> </p>
+          <%= link_to '<i class="fa-solid fa-heart"></i>'.html_safe, user_user_unfavorited_path(user), remote: true, method: :post %>
         </div>
       </div>
     <% end %>
