--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -108,7 +108,10 @@ padding: 1%;
 }
 
 .song-index-btn{
-
-text-decoration: none;
-border-radius: 8px;
+  text-decoration: none;
+  border-radius: 8px;
+  background-color: white;
+  padding: 6px;
+  border: 1px solid black;
+  color: black;
 }
