--- a/app/views/user_songs/index.html.erb
+++ b/app/views/user_songs/index.html.erb
@@ -9,4 +9,4 @@
 <% end %>
 
 <p>Would you like to add a new song?</p>
-<button> <%= link_to "Add a song", new_user_user_song_path, class: "song-index-btn" %> </button>
+<%= link_to "Add a song", new_user_user_song_path, class: "song-index-btn" %>
