Fix issues with chatrooms and users index

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -7,7 +7,7 @@
         <%= cl_image_tag user_chatroom.chatroom.chatroom_buddy(current_user).photos.first.key, class: "chatroom-card-avatar" %>
         <div class="chatroom-card-content">
           <p class="chatroom-card-content-name"><%= user_chatroom.chatroom.chatroom_buddy(current_user).name %></p>
-          <p class="chatroom-card-content-message"><%= user_chatroom.chatroom.messages.last.content.truncate(25) %></p>
+          <p class="chatroom-card-content-message"><%= user_chatroom.chatroom&.messages&.last&.content&.truncate(25) %></p>
         </div>
       </div>
     <% end %>
